# ha-tux

./: .pre-commit-config.yaml  AGENTS.md  README.md  Taskfile.yml  pyproject.toml
polkit/: 49-ha-tux-apt-upgrade.rules  49-ha-tux-brew-upgrade.rules
scripts/: render_service.py  toggle_mpris.py
src/ha_tux/: __init__.py  album_art.py  async_mqtt.py  config.py  gist.py  ha_input_active.py  ha_media.py  ha_zfs.py  host_device.py  idle_monitor.py  media_player_bridge.py  mpris.py  poller.py  run_state.py  systemd.py
src/ha_tux/lock/: entity.py  screensaver.py
src/ha_tux/media/: album_art.py  bridge.py  entity.py  mpris.py
src/ha_tux/power/: entity.py  monitor.py
src/ha_tux/presence/: entity.py  monitor.py
src/ha_tux/smart/: entity.py  report.py  scan.py
src/ha_tux/software_update/: detect.py  publisher.py
systemd/: ha-tux-apt-upgrade.service  ha-tux-brew-upgrade.service  ha-tux-host.service  ha-tux-session.service  ha-tux-smart.service  ha-tux-smart.timer  ha-tux.service
tests/: test_album_art.py  test_async_mqtt.py  test_config.py  test_detect.py  test_entity.py  test_features.py  test_gist.py  test_ha_input_active.py  test_ha_media.py  test_ha_zfs.py  test_host_device.py  test_idle_monitor.py  test_lock_entity.py  test_main.py  test_media_player_bridge.py  test_mpris.py  test_poller.py  test_power_entity.py  test_power_monitor.py  test_presence_entity.py  test_presence_monitor.py  test_publisher.py  test_run_state.py  test_smart_entity.py  test_smart_report.py  test_systemd.py  test_youtube_thumbnail.py  test_zfs.py  test_zfs_entity.py  test_zpool.py
(+2 files in other folders)
