[project]
name = "ha-tux"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Scott Hyndman", email = "scotty.hyndman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ha-mqtt-discoverable",
    "libsh>=0.2.0",
    "pydantic>=2.13.4",
    "sdbus>=0.14.2",
    "structlog>=25.5.0",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
ha-tux = "ha_tux:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "prek>=0.4.3",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py313"
src = ["scripts", "src", "tests"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
failOnWarnings = true
include = ["scripts", "src", "tests"]
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
ha-mqtt-discoverable = { git = "https://github.com/shyndman/ha-mqtt-discoverable" }
